--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "nodemon --inspect index.js"
+    "dev": "nodemon --inspect index.js"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -10,6 +10,12 @@
     "mongoose": "^5.0.7"
   },
   "dependencies": {
-    "body-parser": "^1.18.2"
+    "bluebird": "^3.5.1",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "redis": "^2.8.0",
+    "socket.io": "^2.1.0",
+    "svg-captcha": "^1.3.11",
+    "uuid": "^3.2.1"
   }
 }
